deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prompt-injection-classifier-app
spec:
  type: NodePort
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      nodePort: 30888
  selector:
    app: prompt-injection-classifier-app
